--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body {
     align-items: center;
     text-transform: uppercase;
     box-sizing: border-box;
-    z-index: 10;
+    z-index: 1000;
 }
 
 .navigation-elements {
@@ -369,7 +369,12 @@ body {
     font-family: 'NexaBold';
     text-transform: uppercase;
     font-size: 1.2rem;
-    margin: 0.5rem 0rem;
+    margin: 0.5rem 0rem 0.2rem;
+}
+
+.exp-date {
+    color: aquamarine;
+    margin-bottom: 1rem;
 }
 
 .exp-text {
@@ -380,7 +385,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 10rem;
+    width: 14rem;
     text-align: center;
 }
 
@@ -388,7 +393,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 10rem;
+    width: 14rem;
     text-align: center;
     margin: 0rem 6rem;
 }
@@ -397,7 +402,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 10rem;
+    width: 14rem;
     text-align: center;
 }
 
@@ -795,8 +800,53 @@ body {
 
 /* Extra small devices (phones, 450px and down) */
 @media only screen and (max-width: 450px) {
+
+    .navigation {
+        border-bottom: aqua 2px solid;
+        box-shadow: 0px 10px 20px rgb(0, 0, 0, 0.5);
+    }
+
+    .about-me-info {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+    }
+
+    .text-box {
+        font-size: 2rem;
+        position: static;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+    }
+
     .about-me-text {
-        width: 10.5rem;
+        font-size: 0.9rem;
+    }
+
+    .about-me-info {
+        z-index: 200;
+    }
+
+    .profile-image {
+        z-index: 100;
+        height: 100%;
+        width: 100%;
+        position: absolute;
+        opacity: 0.2;
+        background-image: url("images/gorun.jpg");
+        background-position: 0% 100%;
+        background-size: cover;
+        background-repeat: no-repeat;
+    }
+
+    .my-title {
+        margin-bottom: 0.5rem;
+    }
+
+    .about-me-text {
+        width: 15rem;
     }
 
     .download-btn {
@@ -804,6 +854,12 @@ body {
         padding: 0.7rem 1rem;
         margin-top: 1.5rem;
         border-radius: 30px;
+        background-color: transparent;
+    }
+
+    .project1-technologies, .project2-technologies, .project3-technologies {
+        font-size: 0.8rem;
+        margin-bottom: 0.5rem;
     }
 }
 
