--- a/style.css
+++ b/style.css
@@ -373,7 +373,7 @@ body {
 }
 
 .exp-date {
-    color: aquamarine;
+    color: rgb(27, 226, 143);
     margin-bottom: 1rem;
 }
 
@@ -802,7 +802,7 @@ body {
 @media only screen and (max-width: 450px) {
 
     .navigation {
-        border-bottom: aqua 2px solid;
+        border-bottom: rgb(27, 226, 143) 2px solid;
         box-shadow: 0px 10px 20px rgb(0, 0, 0, 0.5);
     }
 
